Added trigger script for automatically run Handsontable PRO tests after changes made into CE version. #4534

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
 
 after_success:
   - "./test/scripts/trigger-hot-builder-tests.sh"
+  - "./test/scripts/trigger-pro-tests.sh"
 
 notifications:
   email: false
